Alignment fixes

--- a/src/UI/modals/TermsModal.css
+++ b/src/UI/modals/TermsModal.css
@@ -1,5 +1,5 @@
 .modal-header {
-  background-color: #017979;
+  background-color: #3B3B3B;
   color: white;
   flex-direction: row;
   align-items: flex-start;
@@ -9,22 +9,30 @@
   font-size: 12px;
 }
 
+.modal-subtitle {
+  color: #04D976;
+}
+
 .btn-decline {
-  border: 1px solid #04d976;
+  outline: 2px solid #04d976;
+  border: none;
   color: #04d976;
   background-color: white;
   border-radius: none;
 }
 
+.btn-accept {
+  background-color: #E3E3E3;
+  color: #9A9A9A;
+  font-weight: 500;
+  padding: 0.65rem 2rem;
+  border: 2px solid #E3E3E3;
+}
+
 .btn-accept.active {
   background-color: #04d976;
   color: white;
-  border: 1px solid #04d976;
-  border-radius: none;
-}
-
-.button-secondary {
   padding: 0.5rem 2rem;
-  font-weight: 500;
-  border: none;
+  border: 2px solid #04d976;
+  border-radius: none;
 }
