--- a/src/components/HomePage/DataPrivacy.css
+++ b/src/components/HomePage/DataPrivacy.css
@@ -28,6 +28,10 @@
   justify-content: center;
 }
 
+.upper-container {
+  padding: 0 0 0 150px;
+}
+
 /* .data-privacy-text-header {
   
 }
@@ -44,10 +48,17 @@
 @media screen and (max-width: 576px) {
   .data-privacy-main {
     padding-right: 0px;
+    padding-left: 0;
   }
 
   .upper-container {
-    margin: 40px -25px 80px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0px 80px 0px;
+    width: 100%;
+    padding: 0;
   }
 
   .data-container {
